[tool.poetry]
name = "iasp_aquasec_wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.3"
djangorestframework = "3.13.1"
drf-yasg = "1.20.0"
boto3 = "1.21.15"
dependency-injector = {extras = ["yaml"], version = "^4.39.1"}
astro-cloud-aws = "^2.5.1"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_pypi_Release"
url = "https://alm.accenture.com/nexus/repository/IASP_pypi_Release/simple"
default = true

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary=true
