[tool.poetry]
name = "iasp_bigdata_event_service"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.11"
iasp-package-dependency ="*"
soteria-ssc-wrapper = "*"
astro-hashicorp = "*"
mock = "^4.0.2"
confluent_avro = "1.8.0"
kafka-python = "2.0.2"
confluent-kafka = "2.1.1"
jsonschema = "4.17.1"
avro = "1.11.3"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://pkgs.dev.azure.com/IASP-PRODUCT/IASP-PRODUCT/_packaging/IASP_Release_Prod_pypi_Release/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority="explicit"
