[tool.poetry]
name = "iasp_burpsuite_wrapper"
version = "0.1.0"
description = "Burpsuite Wrapper APIs"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.11"
drf-yasg = "1.21.7"
iasp-package-dependency = "*"
astro-hashicorp = "*"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]
file_azure = ["astro-cloud-azure"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://alm.accenture.com/nexus/repository/IASP_Release_Prod_pypi_Release/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
