

[tool.poetry]
name = "dast_atps"
version = "4.2"
description = "Soteria DAST ATP Library"
authors = ["Madiha.Fathima"]

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "2.8.0"
pandas= "2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://alm.accenture.com/nexus/repository/IASP_Release_Prod_pypi_Release/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"

