[tool.poetry]
name = "iasp_extract_feature_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
iasp-package-dependency = "*"
pymongo = "3.12.0"
mock = "4.0.2"
drf-yasg = "1.20.0"


[tool.poetry.extras]
file_azure = ["astro-cloud-azure"]
file_aws = ["astro-cloud-aws"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://pkgs.dev.azure.com/IASP-PRODUCT/IASP-PRODUCT/_packaging/IASP_Release_Prod_pypi_Release/pypi/simple"
priority = "primary"


[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
