[tool.poetry]
name = "iasp_jira_ticketing_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python  =  "^3.11"
psycopg2 = "2.9.1"
django-nose = "1.4.7"
iasp-package-dependency = "*"
jira = "2.0.0"
dependency-injector = "^4.1.4"
pyyaml = "6.0"
astro-cloud-aws = "*"
glom = "22.1.0"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]
file_azure = ["astro-cloud-azure"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://pkgs.dev.azure.com/IASP-PRODUCT/IASP-PRODUCT/_packaging/IASP_Release_Prod_pypi_Release/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
