[tool.poetry]
name = "iasp_sonatype_wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
iasp-package-dependency = "*"
astro-hashicorp = "*"
charset-normalizer = "2.0.8"
coreapi = "2.3.3"
coverage = "7.2.7"
drf-yasg = "1.20.0"
inflection = "0.5.1"
jmespath = "0.10.0"
mock = "4.0.3"
packaging = "21.3"
pyparsing = "3.0.6"
typing_extensions = "4.0.0"
whitenoise = "5.3.0"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]
file_azure = ["astro-cloud-azure"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://alm.accenture.com/nexus/repository/IASP_Release_Prod_pypi_Release/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
