[tool.poetry]
name = "ssc_server_extract_app"
version = "4.1"
description = "ssc server extract application to fetch data from document DB"
authors = ["Sahana <sahana.ravi.kumar@accenture.com>"]

[tool.poetry.dependencies]
python  = "^3.11"
iasp-package-dependency ="*"
soteria-ssc-wrapper = "*"
mock = "^4.0.2"

[tool.poetry.extras]
file_aws = ["astro-cloud-aws"]
file_azure = ["astro-cloud-azure"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://pkgs.dev.azure.com/IASP-PRODUCT/IASP-PRODUCT/_packaging/IASP_Release_Prod_pypi_Release/pypi/simple"
priority = "primary"


[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
