[tool.poetry]
name = "iasp_webinspect_dast_wrapper"
version = "3.0.0"
description = ""
authors = ["Prashant Kumar Gupta <p.g.kumar.gupta@accenture.com>"]

[tool.poetry.dependencies]
python = "^3.11"
iasp-package-dependency = "*"
mock = "4.0.2"



[tool.poetry.extras]
file_azure = ["astro-cloud-azure"]
file_aws = ["astro_cloud_aws"]
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "IASP_Release_Prod_pypi_Release"
url = "https://pkgs.dev.azure.com/IASP-PRODUCT/IASP-PRODUCT/_packaging/IASP_Release_Prod_pypi_Release/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
priority = "explicit"
